Fixes vertical misalignment of elements inside the masthead

--- a/01_src/scss/_typography.scss
+++ b/01_src/scss/_typography.scss
@@ -98,13 +98,13 @@ strong {
 }
 
 ul {
-	line-height: $baseline;
-	margin: 0;
-	margin-top: $baseline;
+	// line-height: $baseline;
+	// margin: 0;
+	// margin-top: $baseline;
 }
 
 li {
-	margin-bottom: $baseline / 2;
+	// margin-bottom: $baseline / 2;
 }
 
 blockquote {
