--- a/01_src/templates/03_blocks/navigation/_navigation.scss
+++ b/01_src/templates/03_blocks/navigation/_navigation.scss
@@ -1,5 +1,5 @@
-.navigation {
-}
+// .navigation {
+// }
 
 .navigation__items {
 	padding-left: 0;
